updated about me section

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <!-- Animate CSS CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>Jane Doe | Web Developer</title>
+  <title>Erin Lawler | Email Developer</title>
 </head>
 
 <body>
   <!-- Navbar -->
   <nav>
-    <h1>JANE DOE</h1>
+    <h1>ERIN LAWLER</h1>
     <ul class="navigation">
       <li><a href="#about" class="nav-link">About</a></li>
       <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -39,32 +39,31 @@
   <section class="hero" id="about">
     <img src="assets/images/wfh_1.svg" alt="jane-doe" loading="lazy" class="hero-img" />
     <div class="bio animate__animated animate__shakeX">
-      <h2 class="bio-title">About Me</h2>
+      <h2 class="bio-title">Hello there!</h2>
       <p class="bio-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-        inventore tempore minus nemo, iste ullam illo laboriosam maiores
-        repudiandae quos!
-      </p>
+        Thanks for stopping by! I hope you enjoy exploring some of my accomplishments as an email developer. You
+        won&apos;t see much code here—by design. While proprietary code I&apos;ve written for others will remain under
+        wraps, I hope this gives you a good sense of what I&apos;m capable of!
     </div>
   </section>
 
   <!-- More about -->
   <section class="more-about">
-    <h2>More About Me</h2>
+    <h2>About Me</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-      nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-      autem deleniti cupiditate molestias quis unde quae totam porro dicta
-      iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      Once upon a time, many moons ago, I found myself deep in the world of advertising, but something was missing. I
+      was itching for a new opportunity. So, I took a leap of faith, waved goodbye to my comfort zone, and enrolled in
+      an intensive three-month web development bootcamp. I haven&apos;t looked back since!
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-      nostrum dolor minus, libero delectus praesentium perferendis
+      Fast forward five years, and here I am, a seasoned email developer! I have spent this time focused on building,
+      maintaining, and optimizing automated marketing campaigns within Salesforce Marketing Cloud. My expertise also
+      includes developing responsive emails, including transactional and marketing communications.
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-      consequuntur labore? Ea totam voluptas amet!
+      I&apos;ve opened doors for myself that I didn&apos;t even know existed back in my broadcast days, and I
+      couldn&apos;t be more grateful for the journey. I&apos;m also grateful to you for taking the time to read
+      through my portfolio!
     </p>
   </section>
 
