updated more about me and pic

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
   <!-- Hero Section -->
   <section class="hero" id="about">
-    <img src="assets/images/wfh_1.svg" alt="jane-doe" loading="lazy" class="hero-img" />
+    <img src="assets/images/erinChicago.jpg" width="200" height="500" alt="me at the Bean in Chicago" loading="lazy"
+      class="hero-img" />
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">Hello there!</h2>
       <p class="bio-text">
