--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body>
   <!-- Navbar -->
   <nav>
-    <h1>ERIN LAWLER</h1>
+    <h1>ERIN LAWLER - Email Developer</h1>
     <ul class="navigation">
       <li><a href="#about" class="nav-link">About</a></li>
-      <li><a href="#projects" class="nav-link">Projects</a></li>
+      <li><a href="#projects" class="nav-link">Work</a></li>
     </ul>
     <button class="burger-menu" id="burger-menu">
       <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -70,17 +70,17 @@
 
   <!-- Projects section -->
   <section class="projects" id="projects">
-    <h2 class="projects-title">Some of my Recent Projects</h2>
+    <h2 class="projects-title">Work Samples</h2>
     <div class="projects-container">
       <div class="project-container project-card">
         <img src="assets/images/expenseTracker.png" alt="expense-tracker" loading="lazy" class="project-pic" />
-        <h3 class="project-title">Expense Tracker</h3>
+        <h3 class="project-title">Order Confirmation Email</h3>
         <p class="project-details">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-          ratione vel inventore labore commodi modi quos culpa aut saepe!
-          Alias!
+          This PDF showcases an Order Confirmation email I developed. The email is designed to be dynamic and scalable,
+          utilizing AMPScript to accommodate two distinct brands, seven languages, and twelve regions.
         </p>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://drive.google.com/file/d/1PwNC1txo2FU0jDwDkMwQ1ByRBuqBGnOV/view?usp=drive_link" target="_blank"
+          class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img src="assets/images/netflixClone.png" alt="netflic-clone" loading="lazy" class="project-pic" />
