--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2 class="projects-title">Work Samples</h2>
     <div class="projects-container">
       <div class="project-container project-card">
-        <img src="assets/images/expenseTracker.png" alt="expense-tracker" loading="lazy" class="project-pic" />
+        <img src="assets/images/orderConfirmThumbnail.png" alt="expense-tracker" loading="lazy" class="project-pic" />
         <h3 class="project-title">Order Confirmation Email</h3>
         <p class="project-details">
           This PDF showcases an Order Confirmation email I developed. The email is designed to be dynamic and scalable,
@@ -93,37 +93,26 @@
         <a href="#" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
-        <img src="assets/images/greenyEarth.png" alt="greeny-earth" loading="lazy" class="project-pic" />
-        <h3 class="project-title">Greeny Earth</h3>
+        <img src="assets/images/postPurchaseThumbnail.png" alt="greeny-earth" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Post Purchase Campaign</h3>
         <p class="project-details">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-          ratione vel inventore labore commodi modi quos culpa aut saepe!
-          Alias!
+          This PDF illustrates my development work for a Post Purchase campaign we implemented.
         </p>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://drive.google.com/file/d/10vSD7JraLaigKk38wuZcb7sCJCerSaDt/view?usp=sharing" target="_blank"
+          class="project-link">Check it Out</a>
       </div>
     </div>
   </section>
 
 
-
-  <!-- Social accounts - Fixed to the right -->
-  <div class="socials">
-    <a href="https://www.linkedin.com/in/erin-l-13033b116" target="_blank"><img
-        src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" /></a>
-  </div>
-
   <!-- Scroll to top -->
   <i class="scroll-up" id="scroll-up"><img src="assets/icons/icons8-upward-arrow.gif" class="socicon up-arrow"
-      alt="" /></i>
+      alt="upwards arrow" /></i>
 
   <!-- Footer section -->
   <footer>
-    <p class="copy">&copy; Copyright 2021</p>
-    <p class="copy">
-      Built with &#x2661; by
-      <a href="https://twitter.com/Ksound22" target="_blank">Kolade Chris (Ksound)</a>
-    </p>
+    <p>Contact me on: </p><a href="https://www.linkedin.com/in/erin-l-13033b116" target="_blank"><img
+        src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" /></a>
   </footer>
 
   <!-- Website scripts -->
