added new order confirm link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!--CSS Styles -->
   <link rel="stylesheet" href="assets/css/styles.css" />
 
+
   <!-- Animate CSS CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Erin Lawler | Email Developer</title>
@@ -75,9 +76,13 @@
           This PDF showcases an Order Confirmation email I developed. The email is designed to be dynamic and scalable,
           utilizing AMPScript to accommodate two distinct brands, seven languages, and twelve regions.
         </p>
-        <a href="https://drive.google.com/file/d/1PwNC1txo2FU0jDwDkMwQ1ByRBuqBGnOV/view?usp=drive_link" target="_blank"
+        <a href="https://drive.google.com/file/d/1K9qz67N5ILCTuRfn4xo1usEZx8KxQgYQ/view?usp=sharing" target="_blank"
           class="project-link">Check it Out</a>
+
+
+
       </div>
+
       <!--
       <div class="project-container project-card">
         <img src="assets/images/netflixClone.png" alt="netflic-clone" loading="lazy" class="project-pic" />
@@ -109,7 +114,7 @@
 
   <!-- Footer section -->
   <footer>
-    <p>Contact me on: </p><a href="https://www.linkedin.com/in/erin-l-13033b116" target="_blank"><img
+    <p>Connect with me: </p><a href="https://www.linkedin.com/in/erin-l-13033b116" target="_blank"><img
         src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" /></a>
   </footer>
 
@@ -119,6 +124,8 @@
   <!-- Ion icons scripts -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.15.349/pdf.min.js"></script>
+
 </body>
 
 </html>
